--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
+title: 忘返
+subtitle: '天涯游子，一梦黄粱'
+description: '我的安全之路'
 keywords:
-author: John Doe
-language: en
+author: 忘返
+language: zh
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://7mitu.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
